[package]
name = "mdns-responder"
version = "0.2.0"
authors = ["Paul Lietar <paul@lietar.net>", "Alex Zarudnyi <hedgar2017@gmail.com>"]
description = "Rust mDNS responder"
repository = "https://github.com/EternalDeiwos/rust-mdns-responder"
readme = "README.md"
license = "MIT"

[dependencies]
byteorder = "1.0"
futures = "0.1.6"
libc = "0.2.35"
log = "0.4"
multimap = "0.4"
net2 = "0.2"
nix = "0.12.0"
rand = "0.6"
tokio-core = "0.1.1"
dns-parser = { git = "https://github.com/plietar/dns-parser" }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.6"
kernel32-sys = "0.2.1"
socket2 = "0.3.8"

[dev-dependencies]
env_logger = "0.5.10"
